--- a/taskpane.html
+++ b/taskpane.html
@@ -26,3 +26,9 @@
     <div id="container"></div>
   </body>
 </html>
+
+
+  <body class="ms-font-m ms-Fabric">
+    <div id="container"></div>
+  </body>
+</html>
